Support keycloak 22.0.5